--- a/assets/style.css
+++ b/assets/style.css
@@ -6,9 +6,8 @@
     padding: 0;
     box-sizing: border-box;
     list-style: none;
+    background-color: #141414;
 }
-
-
 
 .container{
     width: 100%;
@@ -30,14 +29,96 @@
 }
 
 /* HEADER */
-
-header{
-    background-color: #141414;
-}
-
 header .container{
     display: flex;
     align-items: center;
     padding: 0 45px;
     gap: 50px;
+    margin-top: 30px;
+}
+
+header nav{
+    display: flex;
+    flex: 1;
+    align-items: center;
+}
+
+header nav a{
+    text-decoration: none;
+    color: #FFFFFF;
+    font-family: 'Inter', Arial, Helvetica, sans-serif;
+}
+
+header nav .leftside{
+    display: flex;
+    flex: 1;
+}
+
+header nav .leftside a{
+    margin-right: 40px;
+}
+
+header nav .rightside {
+    border: 1px solid #FFFFFF;
+    border-radius: 5px;
+    padding: 15px 40px;
+}
+
+header nav a:hover{
+    color: #999;
+}
+
+header nav .rightside:hover{
+    border: 1px solid #999;
+}
+
+header .menu-mobile{
+    display: none;
+    flex: 1;
+    justify-content: flex-end;
+}
+
+header .menu-icon{
+    width: 32px;
+    height: 32px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    cursor: pointer;
+}
+
+header .menu-icon div{
+    height: 6px;
+    width: 32px;
+    background-color: #FFFFFF;
+}
+
+/* RESPONSIVO PRA TABLET */
+
+@media (max-width: 820px) {
+    header nav{
+        display: none;
+    }
+
+    header .menu-mobile{
+        display: flex;
+    }
+}
+
+.hero .container{
+    padding: 0 45px;
+    margin-top: 70px;
+}
+
+.hero .container .leftside h1{
+    font-size: 60px;
+    color: #FFFFFF;
+    font-family: 'Calistoga', Arial, Helvetica, sans-serif;
+    font-weight: 100;
+}
+
+.hero .container .leftside p{
+    margin-top: 35px;
+    color: #b3b3b3;
+    font-family: 'Inter', Arial, Helvetica, sans-serif;
 }
