--- a/assets/style.css
+++ b/assets/style.css
@@ -105,9 +105,17 @@ header .menu-icon div{
     }
 }
 
+/* CSS DO HERO */
+
 .hero .container{
     padding: 0 45px;
     margin-top: 70px;
+    display: flex;
+}
+
+.hero .leftside,
+.hero .rightside{
+    flex: 1;
 }
 
 .hero .container .leftside h1{
@@ -122,3 +130,14 @@ header .menu-icon div{
     color: #b3b3b3;
     font-family: 'Inter', Arial, Helvetica, sans-serif;
 }
+
+.hero .container .leftside .button a{
+    text-decoration: none;
+    color: #FFFFFF;
+}
+
+.hero .rightside img{
+    width: auto;
+    height: 600px;
+}
+
