--- a/assets/style.css
+++ b/assets/style.css
@@ -6,14 +6,16 @@
     padding: 0;
     box-sizing: border-box;
     list-style: none;
-    background-color: #141414;
+    font-family: 'Inter', Arial, Helvetica, sans-serif;
 }
 
+body{
+    background-color: #141414;
+}
 .container{
     width: 100%;
     margin: auto;
     max-width: 1200px;
-    padding: 0px 20px;
 }
 
 .logo a {
@@ -29,10 +31,10 @@
 }
 
 /* HEADER */
+
 header .container{
     display: flex;
     align-items: center;
-    padding: 0 45px;
     gap: 50px;
     margin-top: 30px;
 }
@@ -93,10 +95,9 @@ header .menu-icon div{
     background-color: #FFFFFF;
 }
 
-/* CSS DO HERO */
+/* HERO */
 
 .hero .container{
-    padding: 0 45px;
     margin-top: 70px;
     display: flex;
 }
@@ -126,7 +127,8 @@ header .menu-icon div{
     font-family: "Inter", Arial, Helvetica, sans-serif;
     text-decoration: none;
     border: 1px solid #FE6A0F;
-    padding: 20px 60px;
+    border-radius: 5px;
+    padding: 20px 70px;
 }
 
 .hero .button:hover{
@@ -138,14 +140,67 @@ header .menu-icon div{
     height: 600px;
 }
 
+/* SEARCH */
+
+.search{
+    background-color: #1F1F1F;
+    padding: 80px 0;
+    margin-top: -100px;
+}
+
+.search .title{
+    color: #FFFFFF;
+    font-size: 32px;
+    font-weight: 500;
+}
+
+.search .sides{
+    display: flex;
+    margin-top: 35px;
+    gap: 100px;
+}
+
+.search .leftside,
+.search .rightside{
+    flex: 1;
+}
+
+.search input,
+.search select{
+    width: 100%;
+    background-color: #2B2B2B;
+    border: none;
+    border-radius: 5px;
+    font-size: 17px;
+    outline: none;
+    padding: 20px;
+    color: white;
+}
+
+.search input{
+    background-image: url(./images/searchIcon.png);
+    background-repeat: no-repeat;
+    background-position: 20px center;
+    padding-left: 60px;
+}
+
+.search select{
+    border-right: 20px solid transparent;
+}
+
 /* RESPONSIVO PRA TABLET */
 
 @media (max-width: 820px) {
+    .logo a{
+        margin-left: 20px;
+    }
+    
     header nav{
         display: none;
     }
-
+    
     header .menu-mobile{
+        margin-right: 20px;
         display: flex;
     }
 
@@ -165,5 +220,19 @@ header .menu-icon div{
 
     .hero .rightside img{
         height: 300px;
+    }
+
+    .search{
+        padding-bottom: 30px;
+    }
+
+    .search .title{
+        font-size: 30px;
+        text-align: center;
+    }
+    .search .sides{
+        flex-direction: column;
+        gap: 15px;
+        margin: 20px;
     }
 }
