--- a/assets/style.css
+++ b/assets/style.css
@@ -250,7 +250,28 @@ header .menu-icon div{
     font-weight: 700;
 }
 
-/* RESPONSIVO */
+/* FOOTER */
+
+footer{
+    background-color: #1F1F1F;
+}
+
+footer .container{
+    display: flex;
+    align-items: center;
+    padding: 50px 0;
+}
+
+footer .logo{
+    flex: 1;
+}
+
+footer .info{
+    color: #616161;
+    font-size: 14px;
+}
+
+/* RESPONSIVO PARA TABLET */
 
 @media (max-width: 820px) {
     .logo a{
@@ -306,7 +327,13 @@ header .menu-icon div{
         grid-template-columns: repeat(2, 1fr);
         margin: 30px;
     }
+
+    footer .info{
+        padding-right: 20px;
+    }
 }
+
+/* RESPONSIVO PARA CELULAR */
 
 @media (max-width: 500px){
     .products-grid{
